--- a/app/comp/menu/menu.module.css
+++ b/app/comp/menu/menu.module.css
@@ -62,7 +62,7 @@
 }
 
 .navItem:after {
-  content: '';
+  content: "";
   position: absolute;
   width: 0;
   height: 1px;
@@ -83,11 +83,21 @@
   animation: slideUpNavItem 0.5s ease-out forwards;
 }
 
-.navItem.animatedNavItem:nth-child(1) { animation-delay: 0.3s; }
-.navItem.animatedNavItem:nth-child(2) { animation-delay: 0.4s; }
-.navItem.animatedNavItem:nth-child(3) { animation-delay: 0.5s; }
-.navItem.animatedNavItem:nth-child(4) { animation-delay: 0.6s; }
-.navItem.animatedNavItem:nth-child(5) { animation-delay: 0.7s; }
+.navItem.animatedNavItem:nth-child(1) {
+  animation-delay: 0.3s;
+}
+.navItem.animatedNavItem:nth-child(2) {
+  animation-delay: 0.4s;
+}
+.navItem.animatedNavItem:nth-child(3) {
+  animation-delay: 0.5s;
+}
+.navItem.animatedNavItem:nth-child(4) {
+  animation-delay: 0.6s;
+}
+.navItem.animatedNavItem:nth-child(5) {
+  animation-delay: 0.7s;
+}
 
 .blockButton {
   position: absolute;
@@ -156,8 +166,6 @@
   white-space: nowrap;
 }
 
-
-
 /* Гамбургер-меню */
 .hamburger {
   display: none;
@@ -198,25 +206,22 @@
   animation: bounceInHamburger 0.5s ease-out 0.9s forwards;
 }
 
-/* Большие экраны */
 @media (min-width: 1440px) {
   .menu {
     height: 100px;
     padding: 0 60px;
   }
-  
+
   .menu.scrolled {
     height: 70px;
   }
-  
+
   .navItem {
     margin: 0 50px;
     font-size: 18px;
   }
-  
 }
 
-/* Планшеты */
 @media (max-width: 1024px) {
   .navItem {
     margin: 0 13px;
@@ -224,27 +229,23 @@
     white-space: nowrap;
   }
   .blockButton {
-   
     right: 20px;
     width: clamp(100px, 15vw, 136px);
     aspect-ratio: 156 / 40;
   }
-  
+
   .menu {
     padding: 0 20px;
   }
-  
+
   .menu.scrolled {
     height: 60px;
   }
 }
 
-/* Средние экраны (650-1024px) */
 @media (max-width: 768px) {
   .navLinks {
-  
     left: 40%;
- 
   }
   .navItem {
     margin: 0 15px;
@@ -252,7 +253,6 @@
   }
 }
 
-/* Экраны между планшетами и мобильными (550-768px) */
 @media (max-width: 650px) {
   .navItem {
     margin: 0 10px;
@@ -260,23 +260,22 @@
   }
 }
 
-/* Мобильные устройства */
 @media (max-width: 550px) {
   .menu {
     height: 60px;
     padding: 0 15px;
     justify-content: flex-start;
   }
-  
+
   .menu.scrolled {
     height: 50px;
   }
-  
+
   .hamburger {
     display: flex;
     margin-right: 20px;
   }
-  
+
   .navLinks {
     position: fixed;
     top: 0;
@@ -293,50 +292,58 @@
     box-shadow: none;
     z-index: 1000;
   }
-  
+
   .navLinks.open {
     left: 0;
     background-color: #e2d3ceec;
   }
-  
+
   .navItem {
     margin: 0;
     font-size: 22px;
     letter-spacing: 2%;
     white-space: nowrap;
   }
-  
+
   .navItem:after {
     bottom: -3px;
   }
-  .blockButton { top: 10px; right: 10px; width: clamp(110px, 32vw, 140px); }
-  .image2 { bottom: -6px; }
-  .image3 { top: -6px; }
+  .blockButton {
+    top: 10px;
+    right: 10px;
+    width: clamp(110px, 32vw, 140px);
+  }
+  .image2 {
+    bottom: -6px;
+  }
+  .image3 {
+    top: -6px;
+  }
 }
 
-/* Маленькие мобильные устройства */
 @media (max-width: 480px) {
   .menu {
     height: 50px;
     padding: 0 10px;
   }
-  
+
   .menu.scrolled {
     height: 45px;
   }
-  
+
   .navLinks {
     width: 80%;
     padding: 20px;
   }
-  
+
   .navItem {
     font-size: 22px;
   }
-  .blockButton { width: clamp(100px, 34vw, 130px);}
+  .blockButton {
+    width: clamp(100px, 34vw, 130px);
+  }
 }
 
-/* Ключевые кадры анимации */
 @keyframes slideDownMenu {
   0% {
     opacity: 0;
@@ -392,5 +399,3 @@
     transform: scale(1);
   }
 }
-
-
